--- a/Group11-Project.ipynb
+++ b/Group11-Project.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "## Average Air Quality in Mornings and Nights in an Italian City"
+    "# Average Air Quality in Mornings and Nights in an Italian City"
    ]
   },
   {
@@ -15,7 +15,7 @@
    "id": "6c242d41-bf2a-4731-882f-f46110c9a6fd",
    "metadata": {},
    "source": [
-    "### 1. Introduction"
+    "## 1. Introduction"
    ]
   },
   {
@@ -23,11 +23,27 @@
    "id": "7f7503c2-d9e4-4cc6-9e86-98de49899404",
    "metadata": {},
    "source": [
-    "Air pollution is one of the leading causes of a number of adverse health problems. Measuring air quality in urban areas is important for regulating outdoor activities and preserving a healthy lifestyle. Air quality is measured through different sensors that detect pollutants and particles in the air. Based on this detection, the air quality is placed on an AQI that ranges from 0-500, or “good” to “hazardous” air quality (Lemeš, 2018) . The AQI is affected by different environmental situations like wind or the seasons, as windy days can carry pollutants to different areas and heating seasons like winter have worse air quality overall (Chen et al., 2015). On a daily basis, the air quality varies with a surge in activities that induce more air pollution, such as added traffic during rush hour. \n",
+    "Air pollution is one of the leading causes of a number of adverse health problems. Measuring air quality in urban areas is important for regulating outdoor activities and preserving a healthy lifestyle. Air quality is measured through different sensors that detect pollutants and particles in the air. Based on this detection, the air quality is placed on an AQI that ranges from 0-500, or “good” to “hazardous” air quality (Lemeš, 2018) . The AQI is affected by different environmental situations like wind or the seasons, as windy days can carry pollutants to different areas and heating seasons like winter have worse air quality overall (Chen et al., 2015). On a daily basis, the air quality varies with a surge in activities that induce more air pollution, such as intense traffic during rush hour (Trozzi et al., 1999). \n",
     "\n",
-    "This begs us to ask the question: *How does the average sensor response used to determine air quality index differ between mornings and nights in an Italian city from 2004 to 2005?*\n",
+    "This begs us to ask the question: ***How does the average sensor response used to determine air quality index differ between mornings and nights in an Italian city from 2004 to 2005?***\n",
     "\n",
     "For our research, we are using the dataset <a href=\"https://archive.ics.uci.edu/dataset/360/air+quality\">Air Quality</a> from the UCI machine learning repository. It contains responses to gas and particle sensors placed in a highly polluted area of an Italian city. This data was collected from 2004-2005 and depicts 9348 observations of hourly averaged concentrations of different chemical air pollutants at that point in time. Some of this data is missing and those cases will be removed from our research. Our variables of interest are the ```date```, ```time```, and the hourly averaged sensor response columns of ``` PT08.S1``` targetting carbon monoxide, ```PT08.S2``` targetting non-metallic hydrocarbons, ``` PT08.S3``` targetting NO<sub>x</sub> , ```PT08.S4``` targetting NO<sub>2</sub>, and ```PT08.S5``` targetting O<sub>3</sub>."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "983bb10a-79ea-47ba-9a6c-e63cce51f713",
+   "metadata": {},
+   "source": [
+    "## 2. Preliminary Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c5eb8e7-5a58-4911-ba70-0536bc4772ed",
+   "metadata": {},
+   "source": [
+    "### 2.1. Loading the relevant libraries"
    ]
   },
   {
@@ -71,6 +87,14 @@
     "library(tidyr)\n",
     "library(lubridate)\n",
     "library(ggplot2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44a48065-aa8f-46eb-b72a-b12f3c807d5a",
+   "metadata": {},
+   "source": [
+    "### 2.2. Reading the dataset from the web"
    ]
   },
   {
@@ -163,8 +187,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7129146a-ff62-409c-988a-36f3f0d02049",
+   "metadata": {},
+   "source": [
+    "### 2.3 Cleaning and wrangling the data into a tidy format"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "00968195-8498-4889-b6d4-da0234411afc",
    "metadata": {},
    "outputs": [
@@ -361,6 +393,14 @@
    ],
    "source": [
     "head(air_quality_cleaned)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cd2f47d-577e-493b-93d0-c9f341cd69e6",
+   "metadata": {},
+   "source": [
+    "### 2.4 Plotting relevant data"
    ]
   },
   {
@@ -3676,6 +3716,16 @@
     "\n",
     "# Print the tibble\n",
     "sensor_summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c97fea3a-b1fd-4072-860b-f0f042e98ef0",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### 2.5. Computing our estimates"
    ]
   },
   {
